--- a/Smoothing/MainWindow.xaml
+++ b/Smoothing/MainWindow.xaml
@@ -24,8 +24,12 @@
         <StackPanel Background="LightCoral" Grid.Row="0" Orientation="Horizontal" FlowDirection="LeftToRight">
             <Button Background="White" Content="Загрузить" Width ="100" Margin="5" Command="{Binding AddCommand}"></Button>
             <Button Background="White" Content="Сгладить" Width="100" Margin="5" 
-                    Command="{Binding BlurCommand}" IsEnabled="{Binding IsImageAvailable }"></Button>
-            <TextBox Background="White" Width ="40" Margin="5" Text="{Binding BlurLevel, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"> </TextBox>
+                    Command="{Binding BlurCommand}" 
+                    
+                    
+                    ></Button>
+            <TextBox Background="White" Width ="40" Margin="5"      
+                     Text="{Binding BlurLevel, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"> </TextBox>
             
         </StackPanel>
 
